Fixed bug #26743 (getElementsByTagName doesn't work properly)